--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,5 +1,5 @@
 <%= form_for(@user) do |f| %>
-  <%= render 'shared/error_messages', object: @user %>
+  <%= render 'shared/error_messages', object: f.object %><!--  この行を更新-->
 
   <%= f.label :nickname %>
   <%= f.text_field :nickname, class: 'form-control' %>
